--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
-# DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
+# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
+DATABASE_URL="postgresql://postgres:XJrBI82v4h6l5qeY@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
+
+API_URL = http://localhost:3000
