--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
-DATABASE_URL="postgresql://postgres:XJrBI82v4h6l5qeY@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
+
+DATABASE_URL="postgresql://postgres:cL0s6K27HVJeCJHV@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
 
 API_URL = http://localhost:3000
