--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
 
-DATABASE_URL="postgresql://postgres:cL0s6K27HVJeCJHV@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
+# DATABASE_URL="postgresql://postgres:cL0s6K27HVJeCJHV@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
 
 API_URL = http://localhost:3000
