API_URL environ variable for dev and prod

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
 
 # DATABASE_URL="postgresql://postgres:cL0s6K27HVJeCJHV@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
 
-API_URL = http://localhost:3000
+API_URL = http://localhost:3000/api/
