git management and cleanup

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pizza-project"
 
-# DATABASE_URL="postgresql://postgres:kw5GRgHiTVgT3ojg@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
+# DATABASE_URL="postgresql://postgres:A1Ueu4rrd8Rbye6R@db.mvrbxbennnrtndwgujdb.supabase.co:5432/postgres"
 
 API_URL = http://localhost:3000
